Added checks for consistency of visibile_on_eyca with url